* Fixes the star sizing issue on Safari
git-svn-id: svn://donmai.us/danbooru/trunk@1530 9af9e794-c952-11db-92b5-8e906a41d509

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -188,6 +188,10 @@ span.unread-topic {
   font-weight: bold;
 }
 
+span.stars {
+	font-family: "Zapf Dingbats", "Apple Symbols", sans-serif;	/* on OS X 10.4, different fonts are used as fallbacks for the full and empty star characters, so let's make sure we use a font that has them at the same size */
+}
+
 span.vote-desc {
 	color: #888;
 	margin-left: 0.5em;
@@ -820,9 +824,3 @@ div#wiki-diff del {
 div#wiki-diff ins {
   background-color: #8f8;
 }
-
-
-.vote-widget { font-family: "Zapf Dingbats", "Apple Symbols", sans-serif }	/* on OS X 10.4, different fonts are used as fallbacks for the full and empty star characters, so let's make sure we use a font that has them at the same size */
-.vote-widget a.vote--1 { color:#f00; }
-.vote-widget a.vote-0  { color:#aaa; }
-.vote-widget a.vote-1  { color:#0f0; }
